syntax = "proto3";

package NFMsg; 

import "NFMsgBase.proto";



message TeamMemberInfo
{
    Ident		id 		= 1;
	string		name 			= 2;
	int32		bp 			= 3;
	int32		leader 			= 4;
}

message ReqAckTeamMemberList
{
    Ident		team_id 		= 1;
	repeated TeamMemberInfo 	inviteList 	= 2;
	repeated TeamMemberInfo 	memberList 	= 3;
}

message AckTeamMemberAdd
{
    Ident		team_id = 1;    
	repeated TeamMemberInfo member	= 2;
}

message AckTeamMemberLeave
{
    Ident		team_id = 1;
	repeated TeamMemberInfo member	= 2;
}

message ReqInviteToTeam
{
	Ident						stranger = 1;
}

message AckInviteToTeam
{
    Ident						team_id = 1;
	Ident						inviter = 2;
	string						name = 3;
	Ident						stranger = 4;
}


message ReqAckAcceptTeamInvite
{
    Ident						team_id = 1;
}

message ReqAckRejectTeamInvite
{
    Ident						team_id = 1;
}

